--- a/OpenWorld/Windows/GameWindow.xaml
+++ b/OpenWorld/Windows/GameWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:controls="clr-namespace:OpenWorld.Controls"
+        xmlns:controls1="clr-namespace:Kalavarda.Primitives.WPF.Controls;assembly=Kalavarda.Primitives.WPF"
         Title="Game" Height="450" Width="800" Background="Black"
         ShowInTaskbar="False">
     <Grid>
@@ -17,5 +18,6 @@
         </Menu>
         
         <controls:GameControl x:Name="_gameControl" Grid.Row="1"/>
+        <controls1:RangeControl x:Name="_heroHP" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="100" Width="400" Height="40" MainBrush="Green" Grid.Row="1"/>
     </Grid>
 </Window>
