--- a/OpenWorld/Controls/GameControl.xaml
+++ b/OpenWorld/Controls/GameControl.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:controls="clr-namespace:OpenWorld.Controls;assembly=OpenWorld.Controls"
              Background="#01808080">
-    <Grid x:Name="_bk" Background="#40008000">
+    <Grid x:Name="_bk">
         <Canvas x:Name="_canvas">
             <Canvas.RenderTransform>
                 <TransformGroup>
