--- a/OpenWorld/Controls/HeroBar.xaml
+++ b/OpenWorld/Controls/HeroBar.xaml
@@ -1,8 +1,8 @@
-﻿<UserControl x:Class="OpenWorld.Controls.TargetControl"
+﻿<UserControl x:Class="OpenWorld.Controls.HeroBar"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:controls="clr-namespace:Kalavarda.Primitives.WPF.Controls;assembly=Kalavarda.Primitives.WPF">
-    <Grid>
+    <Border x:Name="_border" BorderThickness="4">
         <controls:RangeControl x:Name="_hpControl" Width="400" Height="40" MainBrush="Green" Grid.Row="1"/>
-    </Grid>
+    </Border>
 </UserControl>
