--- a/OpenWorld/Windows/GameWindow.xaml
+++ b/OpenWorld/Windows/GameWindow.xaml
@@ -20,7 +20,7 @@
         </Menu>
         
         <controls:GameControl x:Name="_gameControl" Grid.Row="1" ClipToBounds="True"/>
-        <controls1:RangeControl x:Name="_heroHP" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="100" Width="400" Height="40" MainBrush="Green" Grid.Row="1"/>
-        <controls:TargetControl x:Name="_targetControl" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="100" Grid.Row="1"/>
+        <controls:HeroBar x:Name="_heroBar" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="100" Grid.Row="1"/>
+        <controls:TargetBar x:Name="_targetBar" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="100" Grid.Row="1"/>
     </Grid>
 </Window>
