--- a/OpenWorld/Controls/HeroBar.xaml
+++ b/OpenWorld/Controls/HeroBar.xaml
@@ -3,6 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:controls="clr-namespace:Kalavarda.Primitives.WPF.Controls;assembly=Kalavarda.Primitives.WPF">
     <Border x:Name="_border" BorderThickness="4">
-        <controls:RangeControl x:Name="_hpControl" Width="400" Height="40" MainBrush="Green" Grid.Row="1"/>
+        <StackPanel Orientation="Horizontal">
+            <Border Background="#80000000">
+                <TextBlock x:Name="_tbLevel" Foreground="White" Margin="5" VerticalAlignment="Center"/>
+            </Border>
+            <StackPanel>
+                <controls:RangeControl x:Name="_hpControl" Width="400" Height="40" MainBrush="Green"/>
+                <controls:RangeControl x:Name="_xpControl" Height="4" MainBrush="Aqua" ShowText="False"/>
+            </StackPanel>
+        </StackPanel>
     </Border>
 </UserControl>
