--- a/OpenWorld/Controls/HeroBar.xaml
+++ b/OpenWorld/Controls/HeroBar.xaml
@@ -1,16 +1,18 @@
 ﻿<UserControl x:Class="OpenWorld.Controls.HeroBar"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:controls="clr-namespace:Kalavarda.Primitives.WPF.Controls;assembly=Kalavarda.Primitives.WPF">
+             xmlns:controls="clr-namespace:Kalavarda.Primitives.WPF.Controls;assembly=Kalavarda.Primitives.WPF"
+             xmlns:buffs="clr-namespace:Kalavarda.Primitives.Units.WPF.Buffs;assembly=Kalavarda.Primitives.Units.WPF">
     <Border x:Name="_border" BorderThickness="4">
-        <StackPanel Orientation="Horizontal">
-            <Border Background="#80000000">
-                <TextBlock x:Name="_tbLevel" Foreground="White" Margin="5" VerticalAlignment="Center"/>
-            </Border>
-            <StackPanel>
+        <StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <Border Background="#80000000">
+                    <TextBlock x:Name="_tbLevel" Foreground="White" Margin="5" VerticalAlignment="Center"/>
+                </Border>
                 <controls:RangeControl x:Name="_hpControl" Width="400" Height="40" MainBrush="Green"/>
-                <controls:RangeControl x:Name="_xpControl" Height="4" MainBrush="Aqua" ShowText="False"/>
             </StackPanel>
+            <controls:RangeControl x:Name="_xpControl" Height="4" MainBrush="Aqua" ShowText="False"/>
+            <buffs:BuffsControl x:Name="_buffsControl"/>
         </StackPanel>
     </Border>
 </UserControl>
