--- a/OpenWorld/Windows/DebugWindow.xaml
+++ b/OpenWorld/Windows/DebugWindow.xaml
@@ -3,6 +3,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Debug" Height="450" Width="800" ShowInTaskbar="False">
     <Grid>
-        <Image x:Name="_qq" Source="/OpenWorld.Controls;component/Images/Grass.jpg"></Image>
+        <TextBlock x:Name="_tbMousePos"/>
     </Grid>
 </Window>
